# facial-align

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 001_initial_schema.py  002_add_users_table.py  003_multi_study_support.py  004_add_api_keys.py  005_add_review_and_provenance.py  006_add_user_institution_code.py
apps/backend/app/: main.py
apps/backend/app/api/v1/: router.py
apps/backend/app/api/v1/endpoints/: auth.py  capabilities.py  cases.py  dicom.py  health.py  jobs.py  planning.py  reviews.py  segmentation.py  viewer.py  websocket.py
apps/backend/app/core/: authorization.py  config.py  exceptions.py  logging.py  scope.py  security.py
apps/backend/app/db/: database.py  migrations.py
apps/backend/app/middleware/: __init__.py  audit.py  error_handler.py  rate_limiter.py  request_context.py
apps/backend/app/models/: __init__.py  api_key.py  audit.py  case.py  case_study.py  patient.py  plan.py  review.py  segmentation.py  study.py  user.py
apps/backend/app/schemas/: auth.py  capabilities.py  case.py  common.py  dicom.py  export.py  plan.py  segmentation.py
apps/backend/app/services/: capabilities.py
apps/backend/app/services/dicom/: ingestion.py
apps/backend/app/services/export/: __init__.py  printability_validator.py  stl_exporter.py
apps/backend/app/services/mesh/: mesh_service.py
apps/backend/app/services/occlusion/: __init__.py  arch_encoder.py  collision_detection.py  landmark_detector.py  occlusal_losses.py  occlusion_service.py  se3_transforms.py
apps/backend/app/services/postprocessing/: __init__.py  collision_resolver.py  confidence_gate.py  mesh_cleanup.py  surgeon_edit_handler.py  transform_applicator.py
apps/backend/app/services/reduction/: __init__.py  joint_optimizer.py  reduction_service.py
apps/backend/app/services/registration/: registration_service.py
apps/backend/app/services/segmentation/: dental_segmentation.py  segmentation_service.py
apps/backend/app/services/supervised/: __init__.py  ct_encoder.py  inference_service.py  ios_encoder.py  multimodal_fusion.py  prediction_heads.py  supervised_losses.py  supervised_model.py
apps/backend/app/workers/: celery_app.py  tasks.py
apps/frontend/: .eslintrc.cjs  Dockerfile  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
apps/frontend/e2e/: auth.spec.ts  clinician-workspaces.spec.ts  dashboard-cases-upload.spec.ts  support.ts  surfaces.spec.ts
apps/frontend/src/: App.tsx  main.tsx
cli/: __init__.py  admin_commands.py  case_commands.py  main.py  model_commands.py  pipeline_commands.py
data_contracts/: __init__.py  case_review.py  ct_study.py  fracture_fragment.py  intraoral_scan.py  occlusion_plan.py  reduction_plan.py  segmentation_output.py  splint_design.py  supervised_prediction.py  surgeon_edit.py
data_contracts/training/: training_case.py
docs/: ARCHITECTURE.md  MIGRATION_GUIDE.md  REPO_MAP.md  SUPERVISED_REDESIGN.md  setup.md
docs/architecture/: data_flow.md  product_requirements.md  roadmap.md  system_design.md
docs/clinical/: clinical_workflow_summary.md
docs/evaluation/: evaluation_plan.md  training_plan.md
docs/regulatory/: regulatory_considerations.md
examples/: demo_dataset.json
examples/notebooks/: 01_dicom_exploration.py  02_segmentation_demo.py
examples/sample_data/: README.md  sample_case.json  sample_ct_metadata.json  sample_reduction_plan.json
infra/docker/: .env  docker-compose.yml  init-db.sql  nginx.conf
notebooks/: compare_totalseg_vs_dental.ipynb
pipelines/dicom_ingestion/: pipeline.py
pipelines/fracture_reduction/: pipeline.py
pipelines/mesh_extraction/: pipeline.py
pipelines/occlusion_planning/: pipeline.py
pipelines/segmentation/: pipeline.py
research/: ai_native_product_principles.md  baseline_scope_decisions.md  clinical_workflow_research.md  competitive_landscape.md  oss_components_review.md  technical_stack_research.md
scripts/: download_models.py  run_benchmark.py  seed_demo_data.py
sdk/: __init__.py  client.py
services/benchmark/: __init__.py  profiler.py
services/evaluation/: __init__.py  plan_evaluator.py  report_generator.py  surgical_sequence.py
services/inference/: __init__.py  model_registry.py
services/inference/adapters/: dental_adapter.py  landmark_adapter.py  nnunet_adapter.py  reduction_adapter.py  registration_adapter.py  supervised_adapter.py  symmetry_adapter.py  totalsegmentator_adapter.py
services/mesh_generation/: __init__.py  mesh_service.py
services/preprocessing/: __init__.py  ct_preprocessor.py  dicom_deidentifier.py  quality_control.py
services/registration/: __init__.py
tests/: conftest.py  test_occlusion_ml.py  test_reduction_ml.py
tests/fixtures/: __init__.py  case_fixtures.py  dicom_fixtures.py  mesh_fixtures.py  plan_fixtures.py
tests/integration/: test_full_pipeline.py
tests/unit/backend/: api_test_utils.py  test_api_contract.py  test_auth_endpoints.py  test_capabilities_api.py  test_cases_api.py  test_dicom_api.py  test_dicom_service.py  test_health_api.py  test_jobs_api.py  test_mesh_service.py  test_occlusion_service.py  test_planning_api.py  test_postprocessing.py  test_reduction_service.py  test_registration_service.py  (+7 more)
training/: __init__.py  train_supervised.py
training/configs/: supervised_config.yaml
training/datasets/: __init__.py  ct_ios_dataset.py  data_augmentation.py  dental_dataset.py  fracture_dataset.py  normal_reference_dataset.py
training/evaluation/: __init__.py
training/ground_truth/: __init__.py  preop_postop_registration.py
training/synthetic/: __init__.py  fracture_generator.py
training/trainers/: __init__.py  base_trainer.py  landmark_trainer.py  occlusion_trainer.py  reduction_trainer.py  scoring_trainer.py  supervised_trainer.py
(+77 files in other folders)
